# Malv-

./: .env.example  .gitignore  INFERENCE_BACKEND.md  MALV_BACKEND_STATE_REPORT.md  MALV_ULTIMATE_UPGRADE_BLUEPRINT.md  SECURITY_HARDENING_ENV.md  package-lock.json  package.json  tsconfig.base.json
apps/beast-worker/: package.json  pyproject.toml
apps/beast-worker/app/: main.py
apps/beast-worker/app/api/routes/: infer_routes.py
apps/beast-worker/app/core/: http_client.py  openai_compat_urls.py  settings.py
apps/beast-worker/app/inference/: cancel_registry.py  correlation.py  failure_classification.py  inference_config_client.py  inference_telemetry.py  malv_brain_prompt.py  models.py  openai_compat_probe.py  prompt_compose.py  router.py  types.py
apps/beast-worker/app/inference/providers/: __init__.py  base.py  fallback.py  llamacpp.py  ollama.py  openai_compatible.py  transformers_provider.py
apps/beast-worker/app/providers/: local_engine.py
apps/beast-worker/tests/: test_correlation.py  test_failure_classification.py  test_inference_telemetry.py  test_openai_compatible_finish_reason.py  test_openai_compatible_messages.py
docs/: ARCHITECTURE_DEVICE_SMART_HOME.md  CHAT_REPLY_PATH_CONTRACT.md  FINAL_LAUNCH_READINESS_PHASE.md  LAUNCH_SMOKE_RUNNER.md  LOCAL_DEV.md  MALV_VALIDATION_RUNBOOK.md  PHASE1_MILESTONE_DEVICE_MULTIMODAL_SIMULATION.md  PRODUCTION_ROLLOUT_READINESS.md  malv-final-hardening-contract.md  malv-frontend-rules.md
scripts/: dev-doctor.js  launch-smoke-runner.mjs  launch-smoke.env.example  malv-chat-latency-audit.mjs  run-uvicorn-beast.cjs
(+1158 files in other folders)
